--- a/packages/wtqdocs/styles/scss/blog/_index.scss
+++ b/packages/wtqdocs/styles/scss/blog/_index.scss
@@ -25,7 +25,7 @@
   figure figcaption {
     margin-top: 1rem;
     font-style: italic;
-    color: hsl(var(--dark) 0.8);
+    color: hsl(var(--dark), 0.8);
     word-break: break-all;
   }
 }
