--- a/packages/wtqdocs/styles/scss/components/_navbar.scss
+++ b/packages/wtqdocs/styles/scss/components/_navbar.scss
@@ -54,7 +54,7 @@
   }
 
   .dark & {
-    background-color: hsl(var(--black) 0.05);
+    background-color: hsl(var(--black), 0.05);
   }
 
   .wtq-brand {
