--- a/packages/wtqdocs/styles/scss/components/_sidebar.scss
+++ b/packages/wtqdocs/styles/scss/components/_sidebar.scss
@@ -7,7 +7,7 @@
   padding: 5px;
   padding-bottom: 50px;
 
-  border-right: solid 1px hsl(var(--darkest) 0.1);
+  border-right: solid 1px hsl(var(--darkest), 0.1);
 
   ul {
     padding: 0;
@@ -96,7 +96,7 @@
   &:hover,
   &:focus-visible {
     color: var(--darkest) !important;
-    background-color: hsl(var(--medium) 0.1) !important;
+    background-color: hsl(var(--medium), 0.1) !important;
     outline: none !important;
   }
 }
@@ -110,7 +110,7 @@
     width: 100%;
     height: 100vh;
 
-    background-color: hsl(var(--white) 1);
+    background-color: hsl(var(--white), 1);
 
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
 
